# pygbm

./: .gitattributes  .gitignore  .readthedocs.yml  C1P2Q2.ipynb  README.md  pyproject.toml  script.py  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
ljf441_pygbm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pygbm/: __init__.py  cli.py  gbm_simulator.py  version.py
pygbm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
your_package.egg-info/: PKG-INFO  SOURCES.txt
